--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -42,7 +42,7 @@ main {
   max-width: 16.6667%;
   width: 100%;
   padding: 80px 10px 0 10px;
-  border-right: 1px solid #e3e3e3;
+  border-right: 1px solid #eaeaea;
 }
 
 .nextui-user-name {
